# TP_SAT_5SDBD

./: CMakeLists.txt  README.md
Solver/: Clause.cpp  Clause.hpp  Solver.cpp  Solver.hpp  basic_structures.cpp  basic_structures.hpp  heuristics.cpp  heuristics.hpp  inout.cpp  inout.hpp
Solver/util/: Profiler.cpp  Profiler.hpp  SubscribableEvent.cpp  SubscribableEvent.hpp  assert.hpp  cli.hpp  concepts.hpp  enum.hpp  exception.cpp  exception.hpp  random.cpp  random.hpp
Tests/: CMakeLists.txt  test_basic_structures.cpp  test_clause.cpp  test_solver.cpp  test_unit_propagation.cpp  testing_utils.hpp
Tests/problems/: res1.cnf  res2.cnf  res3.cnf  res4.cnf  up1.cnf  up2.cnf  up4.cnf
eval/unsat/trivial/: up3.cnf
